更换获取B站空间信息的API；清理代码